kuztomise/base/dagster/service-dagit.yaml
---
# Source: dagster/templates/service-dagit.yaml
apiVersion: v1
kind: Service
metadata:
  name: dagster
  labels:
    helm.sh/chart: dagster-0.1.0
    app.kubernetes.io/name: dagster
    app.kubernetes.io/instance: dagster
    app.kubernetes.io/version: "0.6.9"
    app.kubernetes.io/managed-by: Tiller
    component: dagit
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: dagster
    app.kubernetes.io/instance: dagster
    component: dagit
